<resources>
    <!--<string name="app_name">sample_QnA</string>-->
    <!--<string name="login_username">Username</string>-->
    <!--<string name="login_password">Password</string>-->
    <!--<string name="login_button">Login</string>-->
    <!--<string name="login_text">Don\'t have an account?\n Register Here</string>-->
    <!--<string name="register_username">Username</string>-->
    <!--<string name="register_email">Email</string>-->
    <!--<string name="register_password">Password</string>-->
    <!--<string name="register_confirm_password">Confirm Password</string>-->
    <!--<string name="register_male">Male</string>-->
    <!--<string name="register_female">Female</string>-->
    <!--<string name="register_button">Register</string>-->
    <!--<string name="register_text">Already Registered?\nLogin Here</string>-->
    <!--<string name="register_firstname">First Name</string>-->
    <!--<string name="register_lastname">Last Name</string>-->
    <!--<string name="ask_question">Ask</string>-->
    <!--<string name="ask_question_text">Add a Question?</string>-->
    <!--<string name="ask_both">Both</string>-->
    <string name="app_name">Brain Booster</string>
    <string name="login_username">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_text">Don\'t have an account?\n Register Here</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_male">Male</string>
    <string name="register_female">Female</string>
    <string name="register_button">Register</string>
    <string name="register_text">Already Registered?\nLogin Here</string>
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="ask_question">Ask</string>
    <string name="ask_question_text">Add a Question?</string>
    <string name="ask_both">Both</string>
    <string name="news_feed"> How can i install Android Studio ? </string>
    <string name="news_feed2">What is the best phone model ? </string>
    <string name="news_feed3"> Does deleted files on android still exists on windows explorer ?</string>
    <string name="whats_on_mind_question">What\'s on your mind ? </string>
    <string name="post">Post</string>
    <string name="profile_name"></string>
    <string name="btn_remove">Remove</string>
    <string name="no_answer">20 Answers</string>
    <string name="no_question">40 Questions</string>
    <string name="fav_view1">How to create a Snackbar?</string>
    <string name="fav_view2">What is Android One?</string>
    <string name="fav_view3">How to create a Toast?</string>
    <string name="fav_view4">How to be a good programmer?</string>
    <string name="fav_view5">How to hide a folder?</string>
    <string name="search">Search here...</string>
    <string name="notification">No notification for You</string>
    <string name="btn_logout">Logout</string>
    <string name="user_email"></string>
    <string name="new_password">New Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="changepassword">Change Password</string>
    <string name="changelocation">Change Location</string>
    <string name="changepicture">Change Profile Picture</string>
    <string name="changework">Change Working Place</string>
    <string name="changedegree">Change Degree</string>
    <string name="changeusername">Change Name</string>
    <string name="works_in"></string>
    <string name="editwork">Working Place</string>
    <string name="editlocation">Location</string>
    <string name="editdegree">Degree</string>
    <string name="editfirstname">First Name</string>
    <string name="editlastname">Last Name</string>
    <string name="lives_in"></string>
    <string name="degree"></string>
    <string name="forgotpassword">Forgotten account?</string>
    <string name="pictureDescription">User Profile</string>
    <string name="facebook_app_id">413797492483959</string>
    <string name="fb_login_protocol_scheme">fb413797492483959</string>
    <string name="com_facebook_loginview_log_out_button">Continue with Facebook</string>

</resources>