<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".RegisterActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/register_username"
            android:drawableLeft="@drawable/img_user"
            android:drawableStart="@drawable/img_user"
            android:inputType="text"
            android:textColorHint="#fff"
            android:ems="10"
            android:maxLines="1"
            android:padding="8dp"
            android:background="@android:color/transparent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>

        <EditText
            android:id="@+id/editTextFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/register_firstname"
            android:drawableLeft="@drawable/img_user"
            android:drawableStart="@drawable/img_user"
            android:inputType="text"
            android:textColorHint="#fff"
            android:ems="10"
            android:maxLines="1"
            android:padding="8dp"
            android:background="@android:color/transparent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>
        <EditText
            android:id="@+id/editTextLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/register_lastname"
            android:drawableLeft="@drawable/img_user"
            android:drawableStart="@drawable/img_user"
            android:inputType="text"
            android:textColorHint="#fff"
            android:ems="10"
            android:maxLines="1"
            android:padding="8dp"
            android:background="@android:color/transparent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/register_email"
            android:drawableLeft="@drawable/img_email"
            android:drawableStart="@drawable/img_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#fff"
            android:ems="10"
            android:maxLines="1"
            android:padding="8dp"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/img_password"
            android:drawableStart="@drawable/img_password"
            android:textColorHint="#fff"
            android:ems="10"
            android:maxLines="1"
            android:padding="8dp"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>
        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/register_confirm_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/img_password"
            android:drawableStart="@drawable/img_password"
            android:textColorHint="#fff"
            android:ems="10"
            android:maxLines="1"
            android:padding="8dp"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>
        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/register_male"
                android:textColor="#fff"/>


            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_female"
                android:textColor="#fff"/>

        </RadioGroup>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/register_button"
            android:clickable="true"
            android:textAllCaps="false"
            android:padding="16dp"
            android:textSize="18sp"
            android:background="@drawable/background_login"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />
    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
