<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".login_activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="10dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/loginImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginEnd="106dp"
            android:layout_marginLeft="105dp"
            android:layout_marginRight="106dp"
            android:layout_marginStart="105dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/pictureDescription"
            android:src="@drawable/login_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/login_username"
            android:drawableLeft="@drawable/img_user"
            android:drawableStart="@drawable/img_user"
            android:inputType="text"
            android:textColorHint="#fff"
            android:ems="10"
            android:maxLines="1"
            android:padding="8dp"
            android:background="@android:color/transparent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:hint="@string/login_password"
            android:drawableLeft="@drawable/img_password"
            android:drawableStart="@drawable/img_password"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:textColorHint="#fff"
            android:ems="10"
            android:maxLines="1"
            android:padding="8dp"
            />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_button"
            android:clickable="true"
            android:textAllCaps="false"
            android:padding="16dp"
            android:textSize="18sp"
            android:background="@drawable/background_login"

            android:focusable="true" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="381dp"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/login_text"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/forgotpassword"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
</RelativeLayout>
