<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_home1">


    <ImageView
        android:id="@+id/imgProfilePicture"
        android:layout_width="230dp"
        android:layout_height="200dp"
        android:layout_marginEnd="106dp"
        android:layout_marginLeft="105dp"
        android:layout_marginRight="106dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile_picture"
        android:contentDescription="@string/pictureDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="58dp"
        android:layout_marginLeft="76dp"
        android:layout_marginRight="58dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="37dp"
        android:drawableLeft="@drawable/img_answer"
        android:gravity="center"
        android:text="@string/no_answer"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_questions"
        app:layout_constraintTop_toBottomOf="@+id/imgProfilePicture" />

    <TextView
        android:id="@+id/tv_questions"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="58dp"
        android:drawableLeft="@drawable/img_qna"
        android:gravity="center"
        android:text="@string/no_question"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_answer"
        app:layout_constraintEnd_toStartOf="@+id/tv_answer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="179dp"
        android:layout_marginLeft="178dp"
        android:layout_marginRight="179dp"
        android:layout_marginStart="178dp"
        android:layout_marginTop="111dp"
        android:text="@string/profile_name"
        android:textColor="@android:color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfilePicture" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:drawableLeft="@drawable/img_email"
        android:drawableStart="@drawable/img_email"
        android:gravity="center"
        android:text="@string/user_email"
        android:textColor="@android:color/black"
        android:textSize="@dimen/profile_txt_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar2" />

    <TextView
        android:id="@+id/tv_works"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/img_work"
        android:gravity="center"
        android:text="@string/works_in"
        android:textColor="@android:color/black"
        android:textSize="@dimen/profile_txt_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_degree" />

    <TextView
        android:id="@+id/tv_lives"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/img_location"
        android:gravity="center"
        android:text="@string/lives_in"
        android:textColor="@android:color/black"
        android:textSize="@dimen/profile_txt_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_works" />

    <TextView
        android:id="@+id/tv_degree"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/img_school"
        android:gravity="center"
        android:text="@string/degree"
        android:textColor="@android:color/black"
        android:textSize="@dimen/profile_txt_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <!--<Button-->
    <!--android:id="@+id/btnChangePassword"-->
    <!--android:layout_width="285dp"-->
    <!--android:layout_height="63dp"-->
    <!--android:layout_marginEnd="62dp"-->
    <!--android:layout_marginLeft="64dp"-->
    <!--android:layout_marginRight="62dp"-->
    <!--android:layout_marginStart="64dp"-->
    <!--android:layout_marginTop="23dp"-->
    <!--android:background="@drawable/backgroung_change_password_button"-->
    <!--android:text="@string/changepassword"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/tv_lives" />-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="403dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/img_answer" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>